--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "check-prettier": "^1.0.3",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.1.1",
+    "echarts": "^4.6.0",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "gh-pages": "^2.0.1",
